--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,4 +2,4 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    uses: dnaq/zmk/.github/workflows/build-user-config.yml@main
+    uses: dnaq/zmk/.github/workflows/build.yml@main
