--- a/config/west.yml
+++ b/config/west.yml
@@ -1,10 +1,10 @@
 manifest:
   remotes:
-    - name: zmkfirmware
+    - name: dnaq
       url-base: https://github.com/dnaq
   projects:
     - name: zmk
-      remote: zmkfirmware
+      remote: dnaq
       revision: plover-hid-hog-attempt
       import: app/west.yml
   self:
